        'smrfactor_mass_user_random' or '_scan' is configured
      - Added 'term1 signature' to output when phase 1 is solved in (1-smr) mode.  This shows whether (1-smr) is positive or negative for sm1, sm2, and sm3.
      - Added c3 to phase1 output status and results for (1-smr) mode
      - "Solving phase1..." status messages now also output for (1-smr) mode
      - Added scripts for graphing two-term test vs randomly generated reference mass in (1-smr) mode.  The scripts are in the ./scripts/scan directory

      Bug fixes:
      - Config file option 'phase1_mc_samples_limit' is now a long long integer to support > 2 billion samples
      - Removed confusing "sqrt()" label for reporting c1 and c2 when phase1 is solved in 2-term modes.  The reported c1 and c2 still represent the unsquared
        term1 and term2 coefficients while phase1 internally works with the squared terms and coefficients.  Phase 1 detail (deprecated) still shows the squared
        coefficients while phase1 internally works with the squared terms and coefficients.  Phase 1 detail (deprecated) still shows the squared coefficients
        used internally.
      - Fixed bug where same exponents in (1-smr) mode were not allowed when 'exp_neg_enable=no'
      - /aws/start.sh now uses the specified config file when launching program
      - Fixed bug where 'stuckprecision' was not set high enough to always cause it to be ignored in 2-term modes

4.3.5 Bug fixes:
      - Fixed critical bug where some infactors and outfactors were being improperly cast to single precision.  This was limiting precision of results in phase2
        which could cause false negative matches against experimental uncertainties, especially when solving for v or sm2.  This also caused many unnecessary
        duplicate formulas to be sent to phase 2.


4.3.4 New features:
      - (1-smr) mode now allows even exponents on term 1, both terms having the same exponent, and negative exponents